# DigitalSoppkontroll

./: CMakeLists.txt  DigitalSoppkontroll.apparmor  DigitalSoppkontroll.cpp  DigitalSoppkontroll.desktop  DigitalSoppkontroll.desktop.in  DigitalSoppkontroll.qml  DigitalSoppkontroll.qrc  LICENSE  README.md  clickable.json  main.cpp  manifest.json.in
po/: digitalsoppkontroll.sjentsch.pot
qml/: Main.qml
